--- a/dts/bindings/sensor/hc-sr04.yaml
+++ b/dts/bindings/sensor/hc-sr04.yaml
@@ -5,7 +5,7 @@ description: HC-SR04 Ultrasonic Ranging Module
 
 compatible: "hc-sr04"
 
-include: base.yaml
+include: [sensor-device.yaml]
 
 properties:
   trig-gpios:
