--- a/src/Kconfig
+++ b/src/Kconfig
@@ -5,15 +5,16 @@
 # SPDX-License-Identifier: LicenseRef-BSD-5-Clause-Nordic
 #
 
-menuconfig HC_SR04
+config HC_SR04
 	bool "HC-SR04 Ultrasonic Ranging Module"
+	default y
 	help
 	  Enable HC-SR04 ultrasonic distance sensor.
 
 if HC_SR04
 
 module = HC_SR04
-module-str = HC-SR04
+module-str = hc-sr04
 source "${ZEPHYR_BASE}/subsys/logging/Kconfig.template.log_config"
 
-endif #HC_SR04
+endif
